[tool.poetry]
name = "course-work"
version = "0"
description = "This is the course work of Potemkin D"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "course_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
